--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:300);
 @import url(https://fonts.googleapis.com/css?family=Lato:300,400);
 
-body {	
-	font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif;
-	font-size: 18px;
-	font-weight: 300;
+	body {
+		font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif;
+		font-size: 16px;
+		font-weight: 300;
+	}
 
-	background-image: url(../img/background.jpg);
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-}
 	a:link,
 	a:visited {
 		color: #0000AA;
@@ -22,64 +18,121 @@ body {
 		color:#0000EE;
 	}	
 
-header {
-	font-family: 'Raleway', 'Helvetica Neue', Helvetica, sans-serif;
-	font-weight: 300;
-	background-color: #FA5A0F; 		
- 	border-bottom: solid 5px #EA4A00; 			
- 	color: #FFFFFF;
-}
-	 h1 {
-	 	font-size: 300%;
-	 	margin: 0;
-	 }
-	 h2 {
-	 	color: #505050;
-	 	font-size: 150%;
-	 	margin: 0;
-	 }
-	 h3 {
-	 	color: #505050;
-	 	font-size: 125%;
+	header, h1, h2, h3 {
+		font-family: 'Raleway', 'Helvetica Neue', Helvetica, sans-serif;
+		font-weight: 300;
+	}
+
+	header {
+
+		background-color: #FA5A0F; 		
+	 	border-bottom: solid 5px #EA4A00; 			
+	 	color: #FFFFFF;
+	}
+	h1 {
+		font-size: 300%;
+		margin: 0;
+	}
+	h2 {
+		color: #505050;
+		font-size: 150%;
+		margin: 0;
+	}
+	h3 {
+		color: #505050;
+		font-size: 125%;
+	}
+
+	 main {
+	 	margin: 0; 	
+	 	background-image: url(../img/ricepaper_v3.png);
+	 	opacity: 0.9;
 	 }
 
- main {
- 	margin-left: 30%;
- 	margin-right: 20px;
- 	margin-top: 20px;
- 	margin-bottom: 20px;
- 	background-image: url(../img/ricepaper_v3.png);
- 	opacity: 0.9;
- }
+	header, section, footer {
+	 	padding: 1em;
+	}
 
- 	header, section, footer {
- 		padding: 1em;
- 	}
+	#tag-line { 	    
+	 	display: inline; 	    
+	} 	
 
- 	#tag-line {
+	#menu { 				
+	 	background:rgba(207, 205, 140, 0.5); 		
+	}
+
+	nav li {
+	    list-style: none;
+	 	display: inline-block;
+	 	margin-right: 1em; 
+	}
+
+	nav ul {
+	 	padding: 0;
+	    margin: 0;
+	}
+
+	dt {
+	    font-weight: 400;
+	}
+
+	dd {
+	 	font-size: 80%;
+	 	margin-left: 1em;
+	 	margin-bottom: 1em;
+	 	font-style: italic; 
+	}
+
+	footer {
+	 	background-color: #FC892F;
+	 	border-top: solid 5px #EC791F; 		
+	 	font-size: 80%;
+	 	text-align: right;
+	}
+	.container-fluid {
+		margin-top, margin-bottom: 0;	
+	}
+
+	#location, #menu, #about {
+		color: #55E;
+	}
+
+	header a:hover,
+	header a:focus {
+		color: #00E;
+	}
+
+	
+
+
+@media screen and (min-width: 992px) {
+	body {			
+		background-image: url(../img/background.jpg);
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-attachment: fixed;
+		font-size: 18px;
+	}
+
+	main {
+	 	margin-left: 30%;
+	 	margin-right: 20px;
+	 	margin-top: 20px;
+	 	margin-bottom: 20px;	 	
+	}
+
+	nav {
+		position: absolute;
+		top: 10px;
+		right: 10px;
+	}
+	#tag-line {
  	    font-size: 120%
  		color: #EEEEEE;
  		margins: 0;
     }
-
- 	#menu { 				
- 		background:rgba(207, 205, 140, 0.5); 		
- 	}
-
- 	dt {
- 		font-weight: 400;
- 	}
-
- 	dd {
- 		font-size: 80%;
- 		margin-left: 1em;
- 		margin-bottom: 1em;
- 		font-style: italic; 
- 	}
-
-footer {
- 		background-color: #FC892F;
- 		border-top: solid 5px #EC791F; 		
- 		font-size: 80%;
- 		text-align: right;
+    .container-fluid {	
+    	margin-left: 30%;
+    	margin-right, margin-top, margin-bottom: 20px;
+    }
 }
